# http/http_handler.go
@@ -48,7 +48,10 @@ func setHttpEndpoints(e *echo.Echo) {
 	e.POST("/api/v1/game", gameController.CreateGame)
 	e.POST("/api/v1/game/join", gameController.JoinGame)
 	e.POST("/api/v1/game/submit-ships", gameController.SubmitShipsLocations)
-	e.PUT("/api/v1/game/move-ship", gameController.MoveShip)
+	e.POST("/api/v1/game/change-turn", gameController.ChangeTurn)
+	e.POST("/api/v1/game/move-ship", gameController.MoveShip)
+	e.POST("/api/v1/game/reveal", gameController.RevealEnemyFields)
+	e.POST("/api/v1/game/explode", gameController.Explode)
 	e.GET("/api/v1/game/:game_id", gameController.GetGame)
 	e.POST("/api/v1/user", userController.CreateUser)
 	e.GET("/api/v1/user/:user_id", userController.GetUser)
